// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Notification baseVue demo works fine 1`] = `
<div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知（展示5秒后消失）
      </div>
      <!---->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`Notification Notification closeAllVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       点击打开多个通知 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    id="t-demo-msg-close-all"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       点击关闭所有通知 
      
    </span>
  </button>
</div>
`;

exports[`Notification Notification closeVue demo works fine 1`] = `
<div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(false)
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(文字)
        </span>
        <div
          class="t-icon-close"
        >
           
          关闭
           
        </div>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(函数)
        </span>
        <div
          class="t-icon-close"
        >
           
          <span>
            close
          </span>
           
        </div>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(插槽)
        </span>
        <div
          class="t-icon-close"
        >
           
          
           x 
          
           
        </div>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       处理开关事件 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       处理定时关闭事件（3s） 
      
    </span>
  </button>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Notification Notification contentVue demo works fine 1`] = `
<div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容(字符串)
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容(函数)
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        <div>
          这是一条消息通知
        </div>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容(插槽)
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        
        <span>
          这是一条消息通知
        </span>
        
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Notification Notification fixPluginVue demo works fine 1`] = `
<div>
  <p>
    组件实例方法调用
  </p>
  <p>
    notify.success({ title: '标题名称', content: '用户表示普通操作信息提示' })
  </p>
  <p>
    notify('success', { title: '标题名称', content: '用户表示普通操作信息提示', duration: 1000 })
  </p>
  <br />
  <div>
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         1000s 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         2000s 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         默认时长 
        
      </span>
    </button>
    <!-- 0 表示永远不自动消失 -->
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         永久显示 
        
      </span>
    </button>
  </div>
  <br />
  <br />
  <p>
    插件方法调用
  </p>
  <p>
    NotifyPlugin.success({ content: '用户表示普通操作信息提示' })
  </p>
  <p>
    NotifyPlugin('success', { content: '用户表示普通操作信息提示', duration: 1000 })
  </p>
  <br />
  <br />
  <div
    class="t-demo-message-theme"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         info 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         success 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         warning 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         error 
        
      </span>
    </button>
  </div>
  <br />
  <br />
</div>
`;

exports[`Notification Notification footerVue demo works fine 1`] = `
<div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义底部详情(函数)
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <div
        class="t-notification__detail"
        slot="footer"
      >
        <span
          class="t-notification__detail-item t-is-active"
        >
          查看详情
        </span>
      </div>
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义底部详情(插槽)
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      
      <div
        class="t-notification__detail"
      >
        <span
          class="t-notification__detail-item"
        >
          重启
        </span>
        <span
          class="t-notification__detail-item t-is-active"
        >
          查看详情
        </span>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Notification Notification iconVue demo works fine 1`] = `
<div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          普通通知
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条普通的消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-error t-is-error"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          危险通知
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条危险的消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-warning t-is-warning"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          告警通知
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条告警的消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-is-success t-is-success"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          成功通知
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条成功的消息通知
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Notification Notification offsetVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       偏移的信息 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       偏移的信息 
      
    </span>
  </button>
</div>
`;

exports[`Notification Notification operationVue demo works fine 1`] = `
<div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          超出的文本省略号显示
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        文案不限长度，但在实际使用时建议文案显示内容不易过多，建议最大展示行数数量以三行为宜，最后一行折行末尾处超出文本建议会变为省略号显示。
      </div>
      <div
        class="t-notification__detail"
        slot="footer"
      >
        <button
          class="t-button t-size-m t-button--variant-text t-button--theme-primary t-notification__detail-item"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            查看详情
            
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          消息通知标题
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        使用 function 自定义底部内容
      </div>
      <div
        class="t-notification__detail"
        slot="footer"
      >
        <button
          class="t-button t-size-m t-button--variant-text t-button--theme-primary t-notification__detail-item"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            查看详情
            
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          <!---->
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        1. 使用插槽自定义标题 2. 使用插槽自定义底部内容
      </div>
      
      <div
        class="t-notification__detail"
      >
        <button
          class="t-button t-size-m t-button--variant-text t-button--theme-default t-notification__detail-item"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
             取消 
            
          </span>
        </button>
        <button
          class="t-button t-size-m t-button--variant-text t-button--theme-primary t-notification__detail-item"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
             稍后提醒我(10s) 
            
          </span>
        </button>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Notification Notification placementVue demo works fine 1`] = `
<div>
  <div
    class="t-message-offset"
  >
    <div
      class="t-input t-size-m"
      modelvalue=""
    >
      <!---->
      <input
        autocomplete="false"
        class="t-input__inner"
        placeholder="请输入横向偏移量"
        type="text"
      />
      <!---->
    </div>
    <div
      class="t-input t-size-m"
      modelvalue=""
    >
      <!---->
      <input
        autocomplete="false"
        class="t-input__inner"
        placeholder="请输入纵向偏移量"
        type="text"
      />
      <!---->
    </div>
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       左上角 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       右上角 
      
    </span>
  </button>
  <br />
  <br />
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       左下角 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       右下角 
      
    </span>
  </button>
</div>
`;

exports[`Notification Notification sizeVue demo works fine 1`] = `
<div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          宽度固定400px
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          文本内容最多支持三行
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条内容为************************************************************************************************************************************************************的消息通知
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Notification Notification toggleVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       自由控制关闭时机（打开） 
      
    </span>
  </button>
</div>
`;

exports[`Notification Notification type4FnVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       信息 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       成功 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       警告 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       错误 
      
    </span>
  </button>
</div>
`;

exports[`Notification Notification typeVue demo works fine 1`] = `
<div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          信息
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-is-success t-is-success"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          成功
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-warning t-is-warning"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          警告
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-error t-is-error"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          错误
        </span>
        <!---->
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <!---->
    </div>
  </div>
</div>
`;
